add separate mappers for each entity instead of one class with all mappings