@@ -3,12 +3,12 @@ package com.server.booking.application;
 import com.server.booking.domain.Booking;
 import com.server.booking.domain.BookingRepository;
 import com.server.booking.domain.TimeSlot;
+import com.server.booking.infrastructure.BookingMapper;
 import com.server.organization.domain.users.UserRepository;
 import com.server.schedule.domain.Schedule;
 import com.server.schedule.domain.ScheduleRepository;
 import com.server.schedule.domain.WorkingHours;
 import com.server.service.domain.ServiceRepository;
-import com.server.shared.infrastructure.UserMapper;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.nio.file.AccessDeniedException;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class BookingService {
@@ -24,39 +23,39 @@ public class BookingService {
     private final BookingRepository bookingRepository;
     private final UserRepository userRepository;
     private final ServiceRepository serviceRepository;
-    private final UserMapper userMapper;
+    private final BookingMapper bookingMapper;
     private final ScheduleRepository scheduleRepository;
 
-    public BookingService(BookingRepository bookingRepository, UserRepository userRepository, ServiceRepository serviceRepository, UserMapper userMapper, ScheduleRepository scheduleRepository) {
+    public BookingService(BookingRepository bookingRepository, UserRepository userRepository, ServiceRepository serviceRepository, BookingMapper bookingMapper, ScheduleRepository scheduleRepository) {
         this.bookingRepository = bookingRepository;
         this.userRepository = userRepository;
         this.serviceRepository = serviceRepository;
-        this.userMapper = userMapper;
+        this.bookingMapper = bookingMapper;
         this.scheduleRepository = scheduleRepository;
     }
 
     @Transactional(readOnly = true)
     public BookingDTO getBooking(int id) {
         Booking booking = findBookingById(id);
-        return userMapper.toDTO(booking);
+        return bookingMapper.toDTO(booking);
     }
 
     @Transactional(readOnly = true)
     public List<BookingDTO> getBookingsBySpecialistId(int id) {
         List<Booking> bookings = bookingRepository.getBookingsBySpecialistId(id);
-        return bookings.stream().map(userMapper::toDTO).collect(Collectors.toList());
+        return bookings.stream().map(bookingMapper::toDTO).toList();
     }
 
     @Transactional(readOnly = true)
     public List<BookingDTO> getBookingsByClientId(int id) {
         List<Booking> bookings = bookingRepository.getBookingsByClientId(id);
-        return bookings.stream().map(userMapper::toDTO).collect(Collectors.toList());
+        return bookings.stream().map(bookingMapper::toDTO).toList();
     }
 
     @Transactional(readOnly = true)
     public List<BookingDTO> getAllBookings() {
         List<Booking> bookings = bookingRepository.getAllBookings();
-        return bookings.stream().map(userMapper::toDTO).collect(Collectors.toList());
+        return bookings.stream().map(bookingMapper::toDTO).toList();
     }
 
     @Transactional
@@ -71,14 +70,14 @@ public class BookingService {
 
         Schedule schedule = scheduleRepository.findBySpecialistId(command.specialistId()).orElseThrow(() -> new EntityNotFoundException("Schedule not found"));
 
-        if(!schedule.isAvailable(requestedSlot)){
+        if (!schedule.isAvailable(requestedSlot)) {
             throw new IllegalStateException("Specialist is not available at this time");
         }
 
-        List<Booking>existingBooking = bookingRepository.getBookingsBySpecialistId(command.specialistId());
+        List<Booking> existingBooking = bookingRepository.getBookingsBySpecialistId(command.specialistId());
         boolean overlaps = existingBooking.stream().anyMatch(b -> b.getTimeSlot().overlaps(requestedSlot));
 
-        if(overlaps){
+        if (overlaps) {
             throw new IllegalStateException("Time slot already booked");
         }
 
@@ -93,7 +92,6 @@ public class BookingService {
         bookingRepository.add(booking);
         return booking.getId();
     }
-
 
     @Transactional
     public void cancelBookingByClient(int bookingId, int clientId) throws AccessDeniedException {
@@ -120,7 +118,6 @@ public class BookingService {
         bookingRepository.add(booking);
     }
 
-
     @Transactional
     public int confirmBySpecialist(int bookingId, int specialistId) {
         Booking booking = findBookingById(bookingId);
@@ -132,12 +129,9 @@ public class BookingService {
         return booking.getId();
     }
 
-
     private Booking findBookingById(int id) {
         return bookingRepository.findById(id).orElseThrow(() -> new EntityNotFoundException(
                 "Booking with id: " + id + " is not found"
         ));
     }
-
-
 }
